<resources>
    <string name="app_name">VeryGoodTaskPlanner</string>
    <string name="chooseTaskStart">Выберите начало:</string>
    <string name="chooseTaskFinish">Выберите конец:</string>
    <string name="chooseTaskName">Название:</string>
    <string name="chooseTaskDescription">Описание задачи:</string>
    <string name="createTaskButtonText">Создать</string>
    <string name="taskNameHint">Очень важная задача</string>
    <string name="cancelTaskCreation">Отменить</string>
    <string name="material_calendar_monday">Пн</string>
    <string name="material_calendar_tuesday">Вт</string>
    <string name="material_calendar_wednesday">Ср</string>
    <string name="material_calendar_thursday">Чт</string>
    <string name="material_calendar_friday">Пт</string>
    <string name="material_calendar_saturday">Сб</string>
    <string name="material_calendar_sunday">Вск</string>
    <array name="material_calendar_months_array">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </array>
    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="delete_task">Удалить задачу</string>
    <string name="task_created_success">Задача добавлена!</string>
    <string name="task_creation_error">Ошибка:\n%s</string>
    <string name="task_saved">Изменения сохранены!</string>
    <string name="task_deleted">Задача удалена!</string>
    <string name="error_end_more_than_start">Нельзя ставить заканчивать задачи в прошлом....</string>
    <string name="task_name_is_blank">Имя задачи не может быть пустым</string>
    <string name="are_you_sure_changes_is_not_saved">Все изменения будут потеряны, вы уверены, что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="save_changes">Save changes</string>
    <string name="task_creation">Task creation</string>

</resources>